--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": "8.9.3"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
